--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Al-Noor: Sanctuary of the Heart</title>
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth.js"></script>
     <style>
         * {
             margin: 0;
@@ -21,7 +24,34 @@
             overflow-x: hidden;
         }
 
-        /* Floral background */
+        nav {
+            position: sticky;
+            top: 0;
+            background: rgba(248, 241, 233, 0.95);
+            backdrop-filter: blur(10px);
+            padding: 1.5rem;
+            text-align: center;
+            z-index: 1000;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        nav a {
+            color: #1A3C34;
+            text-decoration: none;
+            font-family: 'Inter', sans-serif;
+            font-size: 1.2rem;
+            margin: 0 1.5rem;
+            transition: color 0.3s ease;
+        }
+
+        nav a:hover {
+            color: #FF6F61;
+        }
+
+        #add-article-link {
+            display: none;
+        }
+
         body::before {
             content: '';
             position: fixed;
@@ -35,7 +65,6 @@
             animation: floralDrift 30s infinite linear;
         }
 
-        /* Floating particles */
         .particles {
             position: fixed;
             top: 0;
@@ -48,15 +77,15 @@
 
         .particle {
             position: absolute;
-            width: 8px;
-            height: 8px;
-            background: rgba(255, 111, 97, 0.5);
+            width: 10px;
+            height: 10px;
+            background: rgba(255, 111, 97, 0.6);
             border-radius: 50%;
-            animation: float 15s infinite ease-in-out;
+            animation: float 12s infinite ease-in-out;
         }
 
         .hero {
-            background: linear-gradient(135deg, rgba(255, 215, 0, 0.8), rgba(64, 224, 208, 0.7));
+            background: linear-gradient(135deg, rgba(255, 215, 0, 0.85), rgba(64, 224, 208, 0.75));
             height: 600px;
             display: flex;
             justify-content: center;
@@ -73,59 +102,59 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: radial-gradient(circle at center, rgba(248, 241, 233, 0.4), rgba(255, 111, 97, 0.5));
+            background: radial-gradient(circle at center, rgba(248, 241, 233, 0.5), rgba(255, 111, 97, 0.6));
             z-index: -1;
-            animation: gradientPulse 20s infinite ease-in-out;
+            animation: gradientPulse 18s infinite ease-in-out;
         }
 
         .hero-content {
-            max-width: 1100px;
+            max-width: 1200px;
             padding: 3rem;
-            animation: fadeInUp 2s ease-out;
+            animation: fadeInUp 2.2s ease-out;
         }
 
         h1 {
             font-family: 'Amiri', serif;
-            font-size: 5rem;
+            font-size: 5.5rem;
             color: #F8F1E9;
             text-shadow: 0 6px 15px rgba(0, 0, 0, 0.4);
-            margin-bottom: 1rem;
+            margin-bottom: 1.2rem;
         }
 
         .hero p {
             font-family: 'Amiri', serif;
-            font-size: 2rem;
+            font-size: 2.2rem;
             color: #FF6F61;
             text-shadow: 0 3px 6px rgba(0, 0, 0, 0.3);
         }
 
         .tagline {
             font-family: 'Inter', sans-serif;
-            font-size: 1.5rem;
-            color: #2A6349;
-            margin-top: 1rem;
+            font-size: 1.6rem;
+            color: #1A3C34;
+            margin-top: 1.2rem;
             animation: pulseText 3s infinite ease-in-out;
         }
 
         .container {
-            max-width: 1300px;
+            max-width: 1400px;
             margin: 5rem auto;
             padding: 0 3rem;
         }
 
         .content-section {
-            background: rgba(248, 241, 233, 0.95);
-            border-radius: 30px;
+            background: rgba(248, 241, 233, 0.97);
+            border-radius: 35px;
             padding: 5rem;
-            box-shadow: 0 15px 60px rgba(0, 0, 0, 0.2), inset 0 0 15px rgba(255, 111, 97, 0.3);
+            box-shadow: 0 15px 60px rgba(0, 0, 0, 0.25), inset 0 0 15px rgba(255, 111, 97, 0.4);
             backdrop-filter: blur(15px);
             animation: fadeIn 2.5s ease-out;
         }
 
         h2 {
             font-family: 'Amiri', serif;
-            font-size: 3.5rem;
-            color: #2A6349;
+            font-size: 3.8rem;
+            color: #1A3C34;
             margin-bottom: 4rem;
             text-align: center;
             text-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
@@ -133,40 +162,40 @@
 
         .articles-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
             gap: 3rem;
             margin-bottom: 4rem;
         }
 
         .card {
             background: linear-gradient(145deg, #F8F1E9, #FFD700);
-            padding: 2.5rem;
-            border-radius: 20px;
-            border: 1px solid rgba(255, 111, 97, 0.3);
-            box-shadow: 8px 8px 25px rgba(0, 0, 0, 0.15), -8px -8px 25px rgba(255, 255, 255, 0.9);
+            padding: 3rem;
+            border-radius: 25px;
+            border: 1px solid rgba(255, 111, 97, 0.4);
+            box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.2), -10px -10px 30px rgba(255, 255, 255, 0.95);
             transition: transform 0.5s ease, box-shadow 0.5s ease;
             cursor: pointer;
             position: relative;
-            aspect-ratio: 1 / 1.2;
-            animation: cardReveal 1.5s ease-out;
+            aspect-ratio: 1 / 1.3;
+            animation: cardReveal 1.8s ease-out;
         }
 
         .card:hover {
-            transform: translateY(-15px) rotateY(10deg);
-            box-shadow: 12px 12px 30px rgba(0, 0, 0, 0.2), -12px -12px 30px rgba(255, 255, 255, 0.95);
+            transform: translateY(-15px) rotateY(12deg);
+            box-shadow: 15px 15px 35px rgba(0, 0, 0, 0.25), -15px -15px 35px rgba(255, 255, 255, 0.95);
         }
 
         .card h4 {
             font-family: 'Amiri', serif;
-            font-size: 2rem;
-            color: #2A6349;
+            font-size: 2.2rem;
+            color: #1A3C34;
             margin-bottom: 1.5rem;
             text-align: center;
         }
 
         .card p {
             font-family: 'Inter', sans-serif;
-            font-size: 1.1rem;
+            font-size: 1.2rem;
             color: #34495E;
             line-height: 1.9;
             overflow: hidden;
@@ -210,7 +239,7 @@
             margin-top: 1.5rem;
             font-family: 'Amiri', serif;
             font-size: 1.5rem;
-            color: #2A6349;
+            color: #1A3C34;
         }
 
         #visitor-count {
@@ -230,9 +259,9 @@
         }
 
         @keyframes gradientPulse {
-            0% { background: radial-gradient(circle at center, rgba(248, 241, 233, 0.4), rgba(255, 111, 97, 0.5)); }
-            50% { background: radial-gradient(circle at center, rgba(255, 111, 97, 0.5), rgba(248, 241, 233, 0.4)); }
-            100% { background: radial-gradient(circle at center, rgba(248, 241, 233, 0.4), rgba(255, 111, 97, 0.5)); }
+            0% { background: radial-gradient(circle at center, rgba(248, 241, 233, 0.5), rgba(255, 111, 97, 0.6)); }
+            50% { background: radial-gradient(circle at center, rgba(255, 111, 97, 0.6), rgba(248, 241, 233, 0.5)); }
+            100% { background: radial-gradient(circle at center, rgba(248, 241, 233, 0.5), rgba(255, 111, 97, 0.6)); }
         }
 
         @keyframes floralDrift {
@@ -242,8 +271,8 @@
 
         @keyframes float {
             0% { transform: translateY(100vh) scale(0.8); opacity: 0.3; }
-            50% { opacity: 0.7; }
-            100% { transform: translateY(-100vh) scale(1.2); opacity: 0; }
+            50% { opacity: 0.8; }
+            100% { transform: translateY(-100vh) scale(1.3); opacity: 0; }
         }
 
         @keyframes pulseCount {
@@ -265,28 +294,33 @@
 
         @media (max-width: 768px) {
             .hero { height: 500px; }
-            h1 { font-size: 3.8rem; }
+            h1 { font-size: 4rem; }
             .hero p { font-size: 1.8rem; }
-            .tagline { font-size: 1.3rem; }
+            .tagline { font-size: 1.4rem; }
             .container { padding: 0 2rem; }
             .content-section { padding: 3.5rem; }
-            h2 { font-size: 2.8rem; }
+            h2 { font-size: 3rem; }
             .articles-grid { grid-template-columns: 1fr; }
             .card h4 { font-size: 1.8rem; }
-            .card p { font-size: 1rem; }
+            .card p { font-size: 1.1rem; }
             .visitor-counter { font-size: 1.3rem; }
+            nav a { font-size: 1.1rem; margin: 0 1rem; }
         }
 
         @media (max-width: 480px) {
-            h1 { font-size: 3rem; }
+            h1 { font-size: 3.2rem; }
             .hero p { font-size: 1.5rem; }
             .tagline { font-size: 1.2rem; }
             .content-section { padding: 2.5rem; }
-            h2 { font-size: 2.2rem; }
+            h2 { font-size: 2.5rem; }
         }
     </style>
 </head>
 <body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="add-content.html" id="add-article-link">Add Article</a>
+    </nav>
     <div class="particles">
         <div class="particle" style="left: 10%; animation-delay: 0s;"></div>
         <div class="particle" style="left: 30%; animation-delay: 5s;"></div>
@@ -305,19 +339,12 @@
     <div class="container">
         <section class="content-section">
             <h2>A Haven for Your Soul</h2>
-            <div class="articles-grid" id="articles">
-                <!-- Default article -->
-                <div class="card" onclick="window.location.href='article.html?id=0'">
-                    <h4>The Unseen Hands of Mercy</h4>
-                    <p>When a heart shatters, it feels as though the world has dimmed, and light may never again pierce the encroaching shadows. Yet, it is precisely in these moments...</p>
-                </div>
-                <!-- Dynamically added articles will appear here -->
-            </div>
+            <div class="articles-grid" id="articles"></div>
             <h3>Guiding Lights</h3>
             <ul class="resource-list">
-                <!-- Add your links here, e.g.:
-                <li><a href="https://your-link.com" target="_blank">Your Link Text</a> <!-- Keyword: your-keyword --></li>
-                -->
+                <li><a href="https://quran.com" target="_blank">Quran.com: Read and Listen</a> <!-- Keyword: quran --></li>
+                <li><a href="https://sunnah.com" target="_blank">Sunnah.com: Hadith Collection</a> <!-- Keyword: hadith --></li>
+                <li><a href="https://yaqeeninstitute.org" target="_blank">Yaqeen Institute: Islamic Research</a> <!-- Keyword: islamic research --></li>
             </ul>
         </section>
         <footer>
@@ -325,11 +352,47 @@
             <p class="visitor-counter"><span id="visitor-count">0</span> hearts have found solace here</p>
         </footer>
     </div>
-    <script>
-        // Initialize articles with default
-        const defaultArticle = {
-            title: 'The Unseen Hands of Mercy',
-            content: `When a heart shatters, it feels as though the world has dimmed, and light may never again pierce the encroaching shadows. Yet, it is precisely in these moments of profound vulnerability that Allah's grace manifests most beautifully. He doesn't always heal us with a sudden, miraculous erasure of pain. Often, His healing comes through the unseen hands of kindness—the comfort offered by a loyal friend, the wise counsel of a family elder, or the unexpected empathy of a stranger. These are not mere coincidences; they are conduits of Divine love, sent to guide us back to wholeness.
+    <script type="module">
+        import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js';
+        import { getFirestore, collection, getDocs } from 'https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js';
+        import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/9.6.0/firebase-auth.js';
+
+        const firebaseConfig = {
+            // Replace with your Firebase config
+            apiKey: "your-api-key",
+            authDomain: "your-project-id.firebaseapp.com",
+            projectId: "your-project-id",
+            storageBucket: "your-project-id.appspot.com",
+            messagingSenderId: "your-messaging-sender-id",
+            appId: "your-app-id"
+        };
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+        const auth = getAuth(app);
+
+        document.addEventListener('DOMContentLoaded', async function() {
+            document.body.style.background = 'linear-gradient(135deg, #FFD700 0%, #40E0D0 100%)';
+
+            // Visitor counter
+            let visitorCount = sessionStorage.getItem('visitorCount') || 0;
+            visitorCount = parseInt(visitorCount) + 1;
+            sessionStorage.setItem('visitorCount', visitorCount);
+            document.getElementById('visitor-count').textContent = visitorCount;
+
+            // Show/hide Add Article link based on auth
+            onAuthStateChanged(auth, (user) => {
+                document.getElementById('add-article-link').style.display = user ? 'inline' : 'none';
+            });
+
+            // Load articles
+            const articlesContainer = document.getElementById('articles');
+            const articles = [];
+            const querySnapshot = await getDocs(collection(db, 'articles'));
+            querySnapshot.forEach(doc => articles.push(doc.data()));
+            if (articles.length === 0) {
+                articles.push({
+                    title: 'The Unseen Hands of Mercy',
+                    content: `When a heart shatters, it feels as though the world has dimmed, and light may never again pierce the encroaching shadows. Yet, it is precisely in these moments of profound vulnerability that Allah's grace manifests most beautifully. He doesn't always heal us with a sudden, miraculous erasure of pain. Often, His healing comes through the unseen hands of kindness—the comfort offered by a loyal friend, the wise counsel of a family elder, or the unexpected empathy of a stranger. These are not mere coincidences; they are conduits of Divine love, sent to guide us back to wholeness.
 
 Consider the gentle words of the Quran, a sacred scripture that resonates with promises of peace and resilience. Verses remind us that with every hardship, there is ease, a testament to Allah's unwavering presence. He provides strength when our own seems to falter, whispering patience into our souls and resilience into our spirits.
 
@@ -342,28 +405,9 @@ Sometimes, healing manifests in the wisdom we gain from our trials. The very exp
 Healing is rarely a linear path; it's a journey of gentle steps forward, sometimes a few steps back, but always with the promise of a dawn after the longest night. Allah's healing is a continuous unfolding, a testament to His infinite patience and endless love. He orchestrates circumstances, touches hearts, and inspires actions that collectively weave a tapestry of recovery.
 
 Ultimately, the most profound healing Allah offers is the mending of our connection with Him. In our brokenness, we are often drawn closer to our Creator, seeking solace and strength where worldly remedies fall short. And in that renewed connection, we find not just comfort for a shattered heart, but a profound and lasting peace that transcends all earthly sorrow. It's a beautiful, soul-deep healing, made possible through the endless compassion of the Divine.`,
-            media: ''
-        };
-
-        document.addEventListener('DOMContentLoaded', function() {
-            // Set background
-            document.body.style.background = 'linear-gradient(135deg, #FFD700 0%, #40E0D0 100%)';
-
-            // Visitor counter
-            let visitorCount = sessionStorage.getItem('visitorCount') || 0;
-            visitorCount = parseInt(visitorCount) + 1;
-            sessionStorage.setItem('visitorCount', visitorCount);
-            document.getElementById('visitor-count').textContent = visitorCount;
-
-            // Load articles
-            let articles = JSON.parse(localStorage.getItem('articles')) || [];
-            if (!localStorage.getItem('defaultArticleAdded')) {
-                articles = [defaultArticle, ...articles];
-                localStorage.setItem('articles', JSON.stringify(articles));
-                localStorage.setItem('defaultArticleAdded', 'true');
+                    media: ''
+                });
             }
-
-            const articlesContainer = document.getElementById('articles');
             articles.forEach((article, index) => {
                 const articleDiv = document.createElement('div');
                 articleDiv.className = 'card';
