--- a/article.html
+++ b/article.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Article - Al-Noor: Sanctuary of the Heart</title>
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth.js"></script>
     <style>
         * {
             margin: 0;
@@ -19,6 +22,34 @@
             min-height: 100vh;
             position: relative;
             overflow-x: hidden;
+        }
+
+        nav {
+            position: sticky;
+            top: 0;
+            background: rgba(248, 241, 233, 0.95);
+            backdrop-filter: blur(10px);
+            padding: 1.5rem;
+            text-align: center;
+            z-index: 1000;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        nav a {
+            color: #1A3C34;
+            text-decoration: none;
+            font-family: 'Inter', sans-serif;
+            font-size: 1.2rem;
+            margin: 0 1.5rem;
+            transition: color 0.3s ease;
+        }
+
+        nav a:hover {
+            color: #FF6F61;
+        }
+
+        #add-article-link {
+            display: none;
         }
 
         body::before {
@@ -46,11 +77,11 @@
 
         .particle {
             position: absolute;
-            width: 8px;
-            height: 8px;
-            background: rgba(255, 111, 97, 0.5);
+            width: 10px;
+            height: 10px;
+            background: rgba(255, 111, 97, 0.6);
             border-radius: 50%;
-            animation: float 15s infinite ease-in-out;
+            animation: float 12s infinite ease-in-out;
         }
 
         .container {
@@ -60,7 +91,7 @@
         }
 
         .content-section {
-            background: rgba(248, 241, 233, 0.95);
+            background: rgba(248, 241, 233, 0.97);
             border-radius: 25px;
             padding: 4rem;
             box-shadow: 0 12px 50px rgba(0, 0, 0, 0.2), inset 0 0 12px rgba(255, 111, 97, 0.3);
@@ -70,24 +101,24 @@
 
         h2 {
             font-family: 'Amiri', serif;
-            font-size: 3rem;
-            color: #2A6349;
-            margin-bottom: 2rem;
+            font-size: 3.2rem;
+            color: #1A3C34;
+            margin-bottom: 2.5rem;
             text-align: center;
             text-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
         }
 
         .article-content {
             font-family: 'Inter', sans-serif;
-            font-size: 1.2rem;
+            font-size: 1.3rem;
             color: #34495E;
             line-height: 1.9;
         }
 
         .article-content h4 {
             font-family: 'Amiri', serif;
-            font-size: 1.8rem;
-            color: #2A6349;
+            font-size: 2rem;
+            color: #1A3C34;
             margin: 2rem 0 1rem;
         }
 
@@ -106,7 +137,7 @@
             display: inline-block;
             margin-top: 2rem;
             padding: 0.8rem 1.5rem;
-            background: #2A6349;
+            background: #1A3C34;
             color: #F8F1E9;
             text-decoration: none;
             border-radius: 8px;
@@ -132,27 +163,32 @@
 
         @keyframes float {
             0% { transform: translateY(100vh) scale(0.8); opacity: 0.3; }
-            50% { opacity: 0.7; }
-            100% { transform: translateY(-100vh) scale(1.2); opacity: 0; }
+            50% { opacity: 0.8; }
+            100% { transform: translateY(-100vh) scale(1.3); opacity: 0; }
         }
 
         @media (max-width: 768px) {
             .container { padding: 0 2rem; }
             .content-section { padding: 3rem; }
-            h2 { font-size: 2.5rem; }
-            .article-content { font-size: 1.1rem; }
-            .article-content h4 { font-size: 1.6rem; }
+            h2 { font-size: 2.8rem; }
+            .article-content { font-size: 1.2rem; }
+            .article-content h4 { font-size: 1.8rem; }
             .back-link { font-size: 1.1rem; }
+            nav a { font-size: 1.1rem; margin: 0 1rem; }
         }
 
         @media (max-width: 480px) {
             .content-section { padding: 2rem; }
-            h2 { font-size: 2rem; }
-            .article-content { font-size: 1rem; }
+            h2 { font-size: 2.2rem; }
+            .article-content { font-size: 1.1rem; }
         }
     </style>
 </head>
 <body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="add-content.html" id="add-article-link">Add Article</a>
+    </nav>
     <div class="particles">
         <div class="particle" style="left: 10%; animation-delay: 0s;"></div>
         <div class="particle" style="left: 30%; animation-delay: 5s;"></div>
@@ -167,43 +203,41 @@
             <a href="index.html" class="back-link">Back to Articles</a>
         </section>
     </div>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            // Set background
+    <script type="module">
+        import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js';
+        import { getFirestore, collection, getDocs } from 'https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js';
+        import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/9.6.0/firebase-auth.js';
+
+        const firebaseConfig = {
+            // Replace with your Firebase config
+            apiKey: "your-api-key",
+            authDomain: "your-project-id.firebaseapp.com",
+            projectId: "your-project-id",
+            storageBucket: "your-project-id.appspot.com",
+            messagingSenderId: "your-messaging-sender-id",
+            appId: "your-app-id"
+        };
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+        const auth = getAuth(app);
+
+        document.addEventListener('DOMContentLoaded', async function() {
             document.body.style.background = 'linear-gradient(135deg, #FFD700 0%, #40E0D0 100%)';
 
-            // Get article ID from URL
+            // Show/hide Add Article link
+            onAuthStateChanged(auth, (user) => {
+                document.getElementById('add-article-link').style.display = user ? 'inline' : 'none';
+            });
+
+            // Get article ID
             const params = new URLSearchParams(window.location.search);
             const id = parseInt(params.get('id')) || 0;
 
             // Load articles
-            const defaultArticle = {
-                title: 'The Unseen Hands of Mercy',
-                content: `When a heart shatters, it feels as though the world has dimmed, and light may never again pierce the encroaching shadows. Yet, it is precisely in these moments of profound vulnerability that Allah's grace manifests most beautifully. He doesn't always heal us with a sudden, miraculous erasure of pain. Often, His healing comes through the unseen hands of kindness—the comfort offered by a loyal friend, the wise counsel of a family elder, or the unexpected empathy of a stranger. These are not mere coincidences; they are conduits of Divine love, sent to guide us back to wholeness.
-
-Consider the gentle words of the Quran, a sacred scripture that resonates with promises of peace and resilience. Verses remind us that with every hardship, there is ease, a testament to Allah's unwavering presence. He provides strength when our own seems to falter, whispering patience into our souls and resilience into our spirits.
-
-<h4>Finding Solace in Remembrance</h4>
-One of the most potent forms of healing Allah bestows is the gift of remembrance (Dhikr). When our hearts are heavy, turning to Him in prayer, reflection, or supplication can be like finding an oasis in a parched desert. The very act of acknowledging His greatness and surrendering our pain to His will brings an incredible lightness. It's in this surrender that we realize we are not alone in our suffering; we are cradled in the vastness of His love.
-
-Sometimes, healing manifests in the wisdom we gain from our trials. The very experiences that break us can also build us anew, forging a stronger, more compassionate self. Allah, in His infinite wisdom, allows these experiences not to punish, but to purify and elevate us. He sends insights, often through quiet introspection or the words of spiritual guides, that help us reframe our pain into purpose.
-
-<h4>The Dawn After the Darkness</h4>
-Healing is rarely a linear path; it's a journey of gentle steps forward, sometimes a few steps back, but always with the promise of a dawn after the longest night. Allah's healing is a continuous unfolding, a testament to His infinite patience and endless love. He orchestrates circumstances, touches hearts, and inspires actions that collectively weave a tapestry of recovery.
-
-Ultimately, the most profound healing Allah offers is the mending of our connection with Him. In our brokenness, we are often drawn closer to our Creator, seeking solace and strength where worldly remedies fall short. And in that renewed connection, we find not just comfort for a shattered heart, but a profound and lasting peace that transcends all earthly sorrow. It's a beautiful, soul-deep healing, made possible through the endless compassion of the Divine.`,
-                media: ''
-            };
-
-            let articles = JSON.parse(localStorage.getItem('articles')) || [];
-            if (!localStorage.getItem('defaultArticleAdded')) {
-                articles = [defaultArticle, ...articles];
-                localStorage.setItem('articles', JSON.stringify(articles));
-                localStorage.setItem('defaultArticleAdded', 'true');
-            }
-
-            // Display article
-            const article = articles[id] || defaultArticle;
+            const articles = [];
+            const querySnapshot = await getDocs(collection(db, 'articles'));
+            querySnapshot.forEach(doc => articles.push(doc.data()));
+            const article = articles[id] || { title: 'Not Found', content: 'Article not found.', media: '' };
             document.getElementById('article-title').textContent = article.title;
             document.getElementById('article-content').innerHTML = article.content + (article.media ? `<video src="${article.media}" controls></video>` : '');
         });
